--- a/build.xml
+++ b/build.xml
@@ -16,8 +16,8 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
-        <!--<javac srcdir="${src.dir}" destdir="${classes.dir}"/>-->
-        <copy file="${src.dir}/main/HelloWorld.class" todir="${classes.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
+        <!--<copy file="${src.dir}/main/HelloWorld.class" todir="${classes.dir}"/>-->
     </target>
 
     <target name="jar" depends="compile">
