--- a/build.xml
+++ b/build.xml
@@ -50,7 +50,7 @@
             <formatter type="xml"/>
             
             <batchtest fork="yes" todir="${report.dir}">
-                <fileset dir="${src.dir}" includes="*Test.java"/>
+                <fileset dir="${src.dir}/main" includes="*Test.java"/>
             </batchtest>
         </junit>
     </target>
