--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,12 @@
     <property name="jar.dir"     value="${build.dir}/jar"/>
 
     <property name="main-class"  value="oata.HelloWorld"/>
-
+    
+    <javac srcdir="${src.dir}" destdir="${classes.dir}">   
+        <classpath>
+            <pathelement path="junit.jar"/>
+        </classpath>
+    </javac>
 
 
     <target name="clean">
