--- a/build.xml
+++ b/build.xml
@@ -14,11 +14,11 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
-        <classpath>
-            <pathelement path="junit.jar"/>
-        </classpath>
-    </javac>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" >
+            <classpath>
+                <pathelement path="junit.jar"/>
+            </classpath>
+        </javac>
         <!--<copy file="${src.dir}/main/HelloWorld.class" todir="${classes.dir}"/>-->
     </target>
 
