--- a/build.xml
+++ b/build.xml
@@ -43,7 +43,7 @@
 
     <target name="junit" depends="jar">
         <mkdir dir="${report.dir}"/>
-        <junit printsummary="on">
+        <junit printsummary="yes">
             <classpath>
                 <path refid="classpath"/>
                 <path refid="application"/>
