--- a/build.xml
+++ b/build.xml
@@ -44,11 +44,18 @@
     <target name="junit" depends="jar">
         <mkdir dir="${report.dir}"/>
         <junit printsummary="yes">
+            <!--
             <classpath>
                 <path refid="classpath"/>
                 <path refid="application"/>
                 <pathelement path="junit.jar"/>
             </classpath>
+-->
+            <path id="classpath"> 
+                <path refid="classpath"/>
+                <path refid="application"/>
+                <pathelement path="junit.jar"/>
+            </path>
             
             <formatter type="xml"/>
             
