--- a/build.xml
+++ b/build.xml
@@ -44,19 +44,15 @@
     <target name="junit" depends="jar">
         <mkdir dir="${report.dir}"/>
         <junit printsummary="yes">
-            <!--
-            <classpath>
-                <path refid="classpath"/>
+           
+            <classpath location="junit.jar" />
+            <!--    
+            <path refid="classpath"/>
                 <path refid="application"/>
                 <pathelement path="junit.jar"/>
-            </classpath>
--->
-            <path id="classpath"> 
-                <path refid="classpath"/>
-                <path refid="application"/>
-                <pathelement path="junit.jar"/>
-            </path>
-            
+            </classpath> -->
+
+          
             <formatter type="xml"/>
             
             <batchtest fork="yes" todir="${report.dir}">
